@startuml AddCommandClassDiagram

class AddCommand {
    + execute(args: String[])
    + handleAddMultipleFields(fieldData: String)
    + handleAddRecord(recordData: String)
    + handleUpdateFields(fieldData: String)
}

class Inventory
class Csv
class Ui

AddCommand --> Inventory : modifies
AddCommand --> Csv : updates
AddCommand --> Ui : displays

@enduml
